--- a/less/mainpane.less
+++ b/less/mainpane.less
@@ -17,11 +17,13 @@
 }
 
 .main-pane-cont {
-  .transition(transform, .3s);
+  transition: transform, .3s;
+  -webkit-transition: -webkit-transform, .3s;
 }
 
 .main-pane-cont-expanded {
   transform: translate3d(-@mainPaneSideMargin, 0px, 0px);
+  -webkit-transform: translate3d(-@mainPaneSideMargin, 0px, 0px);
 }
 
 @media (max-width: 480px) {
