--- a/less/settingspane.less
+++ b/less/settingspane.less
@@ -108,7 +108,7 @@
 
 .calendar-color {
   border-radius: 0;
-  transition: opacity @transition_time;
+  transition: opacity @transitionTime;
   border-width: 1px;
   border-style: solid;
 }
@@ -155,7 +155,7 @@
   width: 100%;
   box-sizing: border-box;
   padding: 6px 0;
-  transition: color @transition_time, padding-left @transition_time;
+  transition: color @transitionTime, padding-left @transitionTime;
 }
 
 .goog-flat-button-hover.button-next-pane,
@@ -171,7 +171,7 @@
   position: absolute;
   right: 0;
   top: 16px;
-  transition: right @transition_time;
+  transition: right @transitionTime;
 }
 
 .goog-flat-button-focused.button-next-pane > .icon-next-pane {
