--- a/less/sidepane.less
+++ b/less/sidepane.less
@@ -35,8 +35,8 @@
   -webkit-transform: translate3d(-100%, 0, 0);
   transform: translate3d(-100%, 0, 0);
 
-  -webkit-transition: -webkit-transform @transition_time;
-  transition: transform @transition_time;
+  -webkit-transition: -webkit-transform @transitionTime;
+  transition: transform @transitionTime;
 }
 
 .slide-pane-left-visible {
